{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 16,
  "lineage": "027e2ddf-592f-51a1-f0a6-54d1b8403993",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "CHATTES-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002742f5d3183862a",
            "domain": "vpc",
            "id": "eipalloc-002742f5d3183862a",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-237-21-81.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.21.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CHATTES-INSTANCE1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0630ed2ea0cfd9052",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0630ed2ea0cfd9052",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f1ab75bf9b0d8a6f",
            "private_dns": "ip-10-0-1-189.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_ip": "15.237.117.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c0c11ef07f9db31",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07149537081863bd5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0716e5e89d07e5901",
            "tags": {
              "Name": "CHATTES-INSTANCE1"
            },
            "tags_all": {
              "Name": "CHATTES-INSTANCE1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07149537081863bd5"
            ]
          },
          "dependencies": [
            "aws_instance.CHATTES-INSTANCE2",
            "aws_security_group.CHATTES-SG1",
            "aws_security_group.CHATTES-SG2",
            "aws_subnet.CHATTES-SUBNET1",
            "aws_subnet.CHATTES-SUBNET2",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CHATTES-INSTANCE2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-02c3552860d9f8a04",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c3552860d9f8a04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cef69b7ebbdf3fb",
            "private_dns": "ip-10-0-2-129.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0566f72e834e252d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02dcd02ef4af5f25e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bf9482529c9a174",
            "tags": {
              "Name": "CHATTES-INSTANCE2"
            },
            "tags_all": {
              "Name": "CHATTES-INSTANCE2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02dcd02ef4af5f25e"
            ]
          },
          "dependencies": [
            "aws_security_group.CHATTES-SG1",
            "aws_security_group.CHATTES-SG2",
            "aws_subnet.CHATTES-SUBNET2",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CHATTES-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0ffc4d1ff68992b50",
            "id": "igw-0ffc4d1ff68992b50",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "CHATTES-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002742f5d3183862a",
            "association_id": "eipassoc-0462c7e8a314cafea",
            "connectivity_type": "public",
            "id": "nat-065f800e02ac9391c",
            "network_interface_id": "eni-0b290cceeed1663e8",
            "private_ip": "10.0.1.78",
            "public_ip": "15.237.21.81",
            "subnet_id": "subnet-0716e5e89d07e5901",
            "tags": {
              "Name": "CHATTES-NAT-GTW"
            },
            "tags_all": {
              "Name": "CHATTES-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.CHATTES-EIP",
            "aws_internet_gateway.CHATTES-IGW",
            "aws_subnet.CHATTES-SUBNET1",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "CHATTES-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffc4d1ff68992b50",
            "id": "r-rtb-028a83f46ce2ebd5f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028a83f46ce2ebd5f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CHATTES-IGW",
            "aws_internet_gateway_attachment.CHATTES-IGW-ATTACHMENT",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CHATTES-ROUTE1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-034b8dee34a2521b6",
            "id": "rtb-034b8dee34a2521b6",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffc4d1ff68992b50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CHATTES-ROUTE1"
            },
            "tags_all": {
              "Name": "CHATTES-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CHATTES-IGW",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CHATTES-ROUTE2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-03d29417270fb6461",
            "id": "rtb-03d29417270fb6461",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065f800e02ac9391c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CHATTES-ROUTE2"
            },
            "tags_all": {
              "Name": "CHATTES-ROUTE2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.CHATTES-EIP",
            "aws_internet_gateway.CHATTES-IGW",
            "aws_nat_gateway.CHATTES-NAT-GTW",
            "aws_subnet.CHATTES-SUBNET1",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CHATTES-RTB-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdfdf73398cb2230",
            "route_table_id": "rtb-03d29417270fb6461",
            "subnet_id": "subnet-06bf9482529c9a174"
          },
          "dependencies": [
            "aws_eip.CHATTES-EIP",
            "aws_internet_gateway.CHATTES-IGW",
            "aws_nat_gateway.CHATTES-NAT-GTW",
            "aws_route_table.CHATTES-ROUTE2",
            "aws_subnet.CHATTES-SUBNET1",
            "aws_subnet.CHATTES-SUBNET2",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CHATTES-SG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-07149537081863bd5",
            "description": "CHATTES-SG1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07149537081863bd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "CHATTES-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "CHATTES-SG1-ALLOW-SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "CHATTES-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CHATTES-SG1"
            },
            "tags_all": {
              "Name": "CHATTES-SG1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CHATTES-SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-02dcd02ef4af5f25e",
            "description": "CHATTES-SG2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dcd02ef4af5f25e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07149537081863bd5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "CHATTES-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07149537081863bd5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CHATTES-SG2",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CHATTES-SG2"
            },
            "tags_all": {
              "Name": "CHATTES-SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.CHATTES-SG1",
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CHATTES-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0716e5e89d07e5901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0716e5e89d07e5901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CHATTES-SUBNET1"
            },
            "tags_all": {
              "Name": "CHATTES-SUBNET1"
            },
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "dependencies": [
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CHATTES-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-06bf9482529c9a174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bf9482529c9a174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CHATTES-SUBNET2"
            },
            "tags_all": {
              "Name": "CHATTES-SUBNET2"
            },
            "vpc_id": "vpc-0a7d13667ba72df81"
          },
          "dependencies": [
            "aws_vpc.CHATTES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CHATTES-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0a7d13667ba72df81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4e6873e2e512cae",
            "default_route_table_id": "rtb-028a83f46ce2ebd5f",
            "default_security_group_id": "sg-09277c8f9d5c5ac19",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7d13667ba72df81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028a83f46ce2ebd5f",
            "owner_id": "962615889483",
            "tags": {
              "Name": "CHATTES-VPC"
            },
            "tags_all": {
              "Name": "CHATTES-VPC"
            }
          }
        }
      ]
    }
  ]
}